|
|||||||||||||||||||
Issue descriptionThe testDownloadPercentage test has recently been flaky on Mac. After downloading, the DownloadItem corresponding to this download is not 100%. http://build.chromium.org/p/chromium.pyauto/builders/Mac%2010.5/builds/3880/steps/pyauto_functional_tests/logs/stdio ====================================================================== FAIL: downloads.DownloadsTest.testDownloadPercentage: "Verify that during downloading, % values increases," ---------------------------------------------------------------------- Traceback (most recent call last): File "/b/build/slave/Mac_10_5/build/src/chrome/test/functional/downloads.py", line 468, in testDownloadPercentage 'Download percentage should be 100 after download completed') AssertionError: Download percentage should be 100 after download completed ---------------------------------------------------------------------- Aug 27 2011,
Aug 29 2011,
Sep 8 2011,
Sep 8 2011,
Sep 14 2011,
Sep 14 2011,
Sep 22 2011,I believe I have a fix for this bug here: http://codereview.chromium.org/7966016/. Venkataramana, any problem with me taking ownership? Sep 22 2011,Sure. Go ahead. Thanks. Sep 23 2011, Project MemberThe following revision refers to this bug: http://src.chromium.org/viewvc/chrome?view=rev&revision=102535 ------------------------------------------------------------------------ r102535 | rdsmith@chromium.org | Fri Sep 23 11:27:08 PDT 2011 Changed paths: M http://src.chromium.org/viewvc/chrome/trunk/src/content/browser/download/download_item.cc?r1=102535&r2=102534&pathrev=102535 M http://src.chromium.org/viewvc/chrome/trunk/src/chrome/test/functional/PYAUTO_TESTS?r1=102535&r2=102534&pathrev=102535 Fix lack of initialization for delegate delayed complete flag. BUG= 94468 TEST= Review URL: http://codereview.chromium.org/7966016 ------------------------------------------------------------------------ Sep 23 2011,
Sep 23 2011,
This looks to be passing on the waterfalls now. Oct 10 2011, Project Member
The following revision refers to this bug: http://src.chromium.org/viewvc/chrome?view=rev&revision=104811 ------------------------------------------------------------------------ r104811 | rdsmith@chromium.org | Mon Oct 10 15:53:52 PDT 2011 Changed paths: M http://src.chromium.org/viewvc/chrome/branches/874/src/content/browser/download/download_item.cc?r1=104811&r2=104810&pathrev=104811 M http://src.chromium.org/viewvc/chrome/branches/874/src/chrome/test/functional/PYAUTO_TESTS?r1=104811&r2=104810&pathrev=104811 Merge 102535 - Fix lack of initialization for delegate delayed complete flag. BUG= 94468 TEST= Review URL: http://codereview.chromium.org/7966016 TBR=rdsmith@chromium.org Review URL: http://codereview.chromium.org/8222020 ------------------------------------------------------------------------ Oct 11 2011,Issue 99022 has been merged into this issue. Oct 11 2011,
Oct 11 2011,
Verified as fixed in 15.0.874.91 on Win7 and Mac OSX 10.6.8 No "circling" found in download status, LGTM. Oct 11 2011,
wooot awesome! :) ty Oct 11 2011,
Jun 21 2012,
Jun 21 2012,
Oct 13 2012, Project Member
This issue has been closed for some time. No one will pay attention to new comments. If you are seeing this bug or have new data, please click New Issue to start a new bug. Mar 10 2013, Project Member
Mar 13 2013, Project Member
|
|||||||||||||||||||
►
Sign in to add a comment |
Comment 1 by bugdroid1@chromium.org, Aug 27 2011
Project Member