Fix lack of initialization for delegate delayed complete flag.

BUG=94468
TEST=


Review URL: http://codereview.chromium.org/7966016

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@102535 0039d316-1c4b-4281-b951-d872f2087c98