content/browser/download/download_item.cc
@@ -185,7 +185,8 @@ DownloadItem::DownloadItem(DownloadManager* download_manager,
       is_temporary_(!info.save_info.file_path.empty()),
       all_data_saved_(false),
       opened_(false),
-      open_enabled_(true) {
+      open_enabled_(true),
+      delegate_delayed_complete_(false) {
   Init(true /* actively downloading */);
 }
 
@@ -216,7 +217,8 @@ DownloadItem::DownloadItem(DownloadManager* download_manager,
       is_temporary_(false),
       all_data_saved_(false),
       opened_(false),
-      open_enabled_(true) {
+      open_enabled_(true),
+      delegate_delayed_complete_(false) {
   Init(true /* actively downloading */);
 }
 
